--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -9,7 +9,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#E5E5E5"
+        app:cardBackgroundColor="#fff"
         app:cardCornerRadius="25dp"
         >
     <RelativeLayout
